src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__tuple_struct.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Struct(
            StructDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 7,
                        end: 12,
                        start_line: 1,
                        start_col: 8,
                    },
                },
                type_params: None,
                body: Tuple(
                    [
                        Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 13,
                                                    end: 16,
                                                    start_line: 1,
                                                    start_col: 14,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 13,
                                        end: 16,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                            ),
                            span: Span {
                                start: 13,
                                end: 16,
                                start_line: 1,
                                start_col: 14,
                            },
                        },
                        Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 18,
                                                    end: 21,
                                                    start_line: 1,
                                                    start_col: 19,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 18,
                                        end: 21,
                                        start_line: 1,
                                        start_col: 19,
                                    },
                                },
                            ),
                            span: Span {
                                start: 18,
                                end: 21,
                                start_line: 1,
                                start_col: 19,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 0,
                    end: 23,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 23,
        start_line: 1,
        start_col: 1,
    },
}
