src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__tuple_struct_pattern_ref.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 16,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 16,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Ref {
                                                    mutable: false,
                                                    inner: Pattern {
                                                        kind: TupleStruct {
                                                            path: TypePath {
                                                                segments: [
                                                                    TypePathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 20,
                                                                                end: 27,
                                                                                start_line: 1,
                                                                                start_col: 21,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 20,
                                                                    end: 27,
                                                                    start_line: 1,
                                                                    start_col: 21,
                                                                },
                                                            },
                                                            fields: [
                                                                Pattern {
                                                                    kind: Ident {
                                                                        by_ref: true,
                                                                        mutable: false,
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 4,
                                                                            },
                                                                            span: Span {
                                                                                start: 32,
                                                                                end: 33,
                                                                                start_line: 1,
                                                                                start_col: 33,
                                                                            },
                                                                        },
                                                                        subpattern: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 28,
                                                                        end: 33,
                                                                        start_line: 1,
                                                                        start_col: 29,
                                                                    },
                                                                },
                                                            ],
                                                            rest_pos: None,
                                                        },
                                                        span: Span {
                                                            start: 20,
                                                            end: 34,
                                                            start_line: 1,
                                                            start_col: 21,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 19,
                                                    end: 34,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Unary {
                                                    op: Deref,
                                                    operand: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 4,
                                                                            },
                                                                            span: Span {
                                                                                start: 39,
                                                                                end: 40,
                                                                                start_line: 1,
                                                                                start_col: 40,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 39,
                                                                    end: 40,
                                                                    start_line: 1,
                                                                    start_col: 40,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 39,
                                                            end: 40,
                                                            start_line: 1,
                                                            start_col: 40,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 38,
                                                    end: 40,
                                                    start_line: 1,
                                                    start_col: 39,
                                                },
                                            },
                                            span: Span {
                                                start: 19,
                                                end: 40,
                                                start_line: 1,
                                                start_col: 20,
                                            },
                                        },
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Wildcard,
                                                span: Span {
                                                    start: 42,
                                                    end: 43,
                                                    start_line: 1,
                                                    start_col: 43,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 0,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 47,
                                                            end: 48,
                                                            start_line: 1,
                                                            start_col: 48,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 47,
                                                    end: 48,
                                                    start_line: 1,
                                                    start_col: 48,
                                                },
                                            },
                                            span: Span {
                                                start: 42,
                                                end: 48,
                                                start_line: 1,
                                                start_col: 43,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 50,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 52,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 52,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 52,
        start_line: 1,
        start_col: 1,
    },
}
